--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "backend": "json-server --whatch db/db.json"
+    "backend": "json-server --watch db/db.json"
   },
   "dependencies": {
     "pinia": "^2.0.32",
